allow deep reflection for junit-pioneer
https://github.com/junit-pioneer/junit-pioneer/issues/387